--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "application-name",
-  "version": "1.0.0",
+  "name": "vert-application",
+  "version": "0.0.1",
   "description": "Application description.",
   "scripts": {
-    "start": "meteor --settings settings-development.json",
+    "start": "meteor --settings settings-development.json --port 3030",
     "test": "meteor test --driver-package practicalmeteor:mocha --port 5000",
     "chimp-watch": "chimp --ddp=http://localhost:3000 --watch --mocha --path=tests",
     "chimp-test": "chimp --ddp=http://localhost:3000 --mocha --path=tests",
     "staging": "meteor deploy staging.meteor.com --settings settings-development.json",
-    "production": "meteor deploy production.meteor.com --settings settings-production.json"
+    "production": "meteor deploy production.meteor.com --settings settings.json"
   },
   "devDependencies": {
-    "chimp": "^0.39.1",
-    "eslint": "^2.13.1",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-jsx-a11y": "^1.5.5",
-    "eslint-plugin-meteor": "^3.6.0",
-    "eslint-plugin-react": "^5.2.2",
-    "faker": "^3.1.0"
+    "chimp": "^0.39.4"
   },
   "eslintConfig": {
     "parserOptions": {
@@ -56,13 +50,21 @@
     }
   },
   "dependencies": {
+    "accounting": "^0.4.1",
+    "bcrypt": "^0.8.7",
     "bootstrap": "^3.3.7",
+    "faker": "^3.1.0",
+    "firebase": "^3.3.0",
     "jquery": "^2.2.4",
     "jquery-validation": "^1.15.1",
     "react": "^15.3.0",
     "react-addons-pure-render-mixin": "^15.2.1",
     "react-bootstrap": "^0.30.2",
+    "react-bootstrap-date-picker": "^3.3.1",
+    "react-bootstrap-pagination": "^1.0.2",
+    "react-currency-masked-input": "^1.0.2",
     "react-dom": "^15.3.0",
+    "react-input-mask": "^0.7.2",
     "react-komposer": "^1.13.1",
     "react-router": "^2.6.1",
     "react-router-bootstrap": "^0.23.1"
